--- a/weatherappmodule/src/main/AndroidManifest.xml
+++ b/weatherappmodule/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="by.mbicycle.develop.weatherappmodule">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
